[project]
name = "tldv_downloader"
version = "0.0.0"
description = "Local tooling marker — added 2026-05-05 for deptry compatibility (see universal-claudemd.md §44)"
requires-python = ">=3.10"

[tool.deptry]
# Universal-default deptry config (v37)
ignore = ["DEP002", "DEP003"]  # transitive deps; adjust per-repo
extend_exclude = ["tests", "docs", "scripts"]

[tool.vulture]
# Universal-default vulture config (v37)
min_confidence = 80
ignore_decorators = ["@app.route", "@router.", "@pytest.fixture"]
exclude = ["tests/", "migrations/"]
